@@ -1,13 +1,18 @@
 package io.openems.backend.alerting;
 
+import java.lang.annotation.Annotation;
+import java.time.Instant;
 import java.time.ZonedDateTime;
+import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.HashMap;
+import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
+import java.util.concurrent.LinkedBlockingQueue;
+import java.util.concurrent.ThreadPoolExecutor;
+import java.util.concurrent.TimeUnit;
 
 import org.osgi.service.event.Event;
 import org.osgi.service.event.EventAdmin;
@@ -16,18 +21,45 @@ import com.google.gson.JsonElement;
 
 import io.openems.backend.alerting.scheduler.MessageScheduler;
 import io.openems.backend.alerting.scheduler.MessageSchedulerService;
-import io.openems.backend.common.metadata.AlertingSetting;
+import io.openems.backend.alerting.scheduler.MinuteTimer;
+import io.openems.backend.common.alerting.OfflineEdgeAlertingSetting;
+import io.openems.backend.common.alerting.SumStateAlertingSetting;
 import io.openems.backend.common.metadata.Edge;
 import io.openems.backend.common.metadata.Mailer;
 import io.openems.backend.common.test.DummyMetadata;
+import io.openems.common.channel.Level;
+import io.openems.common.exceptions.OpenemsException;
+import io.openems.common.test.TimeLeapClock;
 
 public class Dummy {
+
+	/**
+	 * Dummy ThreadPoolExecutor, that executes tasks in the caller Thread.
+	 *
+	 * @return Dummy {@link ThreadPoolExecutor}
+	 */
+	public static ThreadPoolExecutor executor() {
+		return new ThreadPoolExecutor(1, 1, 0, TimeUnit.MINUTES, new LinkedBlockingQueue<>()) {
+			@Override
+			public void execute(Runnable command) {
+				command.run();
+			}
+		};
+	}
+
 	public static class MailerImpl implements Mailer {
-		public Map<ZonedDateTime, String> sentMails = new HashMap<>();
+		public record Mail(ZonedDateTime sentAt, String template) {
+		}
+
+		public final List<Mail> sentMails = new LinkedList<>();
 
 		@Override
-		public void sendMail(ZonedDateTime sendAt, String template, JsonElement params) {
-			this.sentMails.put(sendAt, template);
+		public synchronized void sendMail(ZonedDateTime sendAt, String template, JsonElement params) {
+			this.sentMails.add(new Mail(sendAt, template));
+		}
+
+		public int getMailsCount() {
+			return this.sentMails.size();
 		}
 	}
 
@@ -67,19 +99,33 @@ public class Dummy {
 		}
 	}
 
-	public static class MetadataImpl extends SimpleMetadataImpl {
-		public List<Edge> edges;
-		public Map<String, List<AlertingSetting>> settings;
+	public static class AlertingMetadataImpl extends SimpleMetadataImpl {
+		private Collection<Edge> edges;
+		private Map<String, List<OfflineEdgeAlertingSetting>> offlineSettings;
+		private Map<String, List<SumStateAlertingSetting>> sumStateSettings;
 
 		/**
-		 * Initialize Metadata with test data.
+		 * Initialize Metadata with test data for Offline-Alerting.
 		 *
 		 * @param edges    to add
 		 * @param settings to add
 		 */
-		public void initialize(List<Edge> edges, Map<String, List<AlertingSetting>> settings) {
+		public void initializeOffline(Collection<Edge> edges, Map<String, List<OfflineEdgeAlertingSetting>> settings) {
 			this.edges = edges;
-			this.settings = settings;
+			this.offlineSettings = settings;
+			this.sumStateSettings = Map.of();
+		}
+
+		/**
+		 * Initialize Metadata with test data for SumState-Alerting.
+		 *
+		 * @param edges    to add
+		 * @param settings to add
+		 */
+		public void initializeSumState(Collection<Edge> edges, Map<String, List<SumStateAlertingSetting>> settings) {
+			this.edges = edges;
+			this.sumStateSettings = settings;
+			this.offlineSettings = Map.of();
 		}
 
 		@Override
@@ -94,17 +140,43 @@ public class Dummy {
 
 		@Override
 		public Collection<Edge> getAllOfflineEdges() {
-			return this.edges.stream().filter(Edge::isOffline).collect(Collectors.toList());
+			return this.edges.stream().filter(Edge::isOffline).toList();
 		}
 
 		@Override
-		public List<AlertingSetting> getUserAlertingSettings(String edgeId) {
-			return this.settings.get(edgeId);
+		public List<OfflineEdgeAlertingSetting> getEdgeOfflineAlertingSettings(String edgeId) throws OpenemsException {
+			return this.offlineSettings.get(edgeId);
+		}
+
+		@Override
+		public List<SumStateAlertingSetting> getSumStateAlertingSettings(String edgeId) throws OpenemsException {
+			return this.sumStateSettings.get(edgeId);
+		}
+
+		@Override
+		public Optional<Level> getSumState(String edgeId) {
+			return this.getEdge(edgeId).map(Edge::getSumState);
+		}
+
+		public void setSumState(String edgeId, Level sumState) {
+			this.getEdge(edgeId).ifPresent(e -> e.setSumState(sumState));
+		}
+
+		public Collection<Edge> getEdges() {
+			return this.edges;
+		}
+
+		public Map<String, List<OfflineEdgeAlertingSetting>> getOfflineSettings() {
+			return this.offlineSettings;
+		}
+
+		public Map<String, List<SumStateAlertingSetting>> getSumStateSettings() {
+			return this.sumStateSettings;
 		}
 	}
 
 	public static class EventAdminImpl implements EventAdmin {
-		public List<Event> lastEvents = new ArrayList<>();
+		private List<Event> lastEvents = new ArrayList<>();
 
 		public EventAdminImpl() {
 
@@ -119,5 +191,96 @@ public class Dummy {
 		public void sendEvent(Event event) {
 			this.lastEvents.add(event);
 		}
+	}
+
+	public static class TimeLeapMinuteTimer extends MinuteTimer {
+
+		private final TimeLeapClock timeLeapClock;
+		private int advanced = 0;
+
+		public TimeLeapMinuteTimer(Instant instant) {
+			this(new TimeLeapClock(instant));
+		}
+
+		private TimeLeapMinuteTimer(TimeLeapClock clock) {
+			super(clock);
+			this.timeLeapClock = clock;
+		}
+
+		/**
+		 * Leap the given amount in minutes. executing cycle method every time.
+		 *
+		 * @param amount to leap in minutes
+		 */
+		public void leap(long amount) {
+			for (int i = 0; i < amount; i++) {
+				this.timeLeapClock.leap(1, ChronoUnit.MINUTES);
+				this.advanced += 1;
+				this.cycle();
+			}
+		}
+
+		/**
+		 * Try to advance the Clock to a specific amount of minutes after
+		 * initialization. If the given point is ahead, the time will leap by the
+		 * missing amount. If the given point is behind, nothing will happen.
+		 * <p>
+		 * A return value >=0 means, the clock has advanced the given amount in minutes
+		 * with this call.
+		 * </p>
+		 * <p>
+		 * A return value <0 means, the clock has already advanced the given amount
+		 * above.
+		 * </p>
+		 *
+		 * @param point to advance to
+		 * @return difference
+		 */
+		public long leapTo(long point) {
+			var advancement = point - this.advanced;
+			if (advancement > 0) {
+				this.leap(advancement);
+			}
+			return advancement;
+		}
+
+		/**
+		 * Get the amount this Timer has advanced since it was initialized.
+		 *
+		 * @return total leapt minutes.
+		 */
+		public int advanced() {
+			return this.advanced;
+		}
+	}
+
+	protected static Config testConfig(int initialDelay, boolean onOffline, boolean onSumState) {
+		return new Config() {
+
+			@Override
+			public Class<? extends Annotation> annotationType() {
+				return Config.class;
+			}
+
+			@Override
+			public String webconsole_configurationFactory_nameHint() {
+				return "Alerting";
+			}
+
+			@Override
+			public boolean notifyOnSumStateChange() {
+				return onSumState;
+			}
+
+			@Override
+			public boolean notifyOnOffline() {
+				return onOffline;
+			}
+
+			@Override
+			public int initialDelay() {
+				return initialDelay;
+			}
+		};
 	}
 }
